@@ -17,89 +17,57 @@
 # limitations under the License.
 ################################################################################
 
+# Start/stop a Flink JobManager.
+USAGE="Usage: jobmanager.sh (start (local|cluster) [host] [webui-port]|stop|stop-all)"
 
 STARTSTOP=$1
 EXECUTIONMODE=$2
+HOST=$3 # optional when starting multiple instances
+WEBUIPORT=$4 # optional when starting multiple instances
 
 bin=`dirname "$0"`
 bin=`cd "$bin"; pwd`
 
 . "$bin"/config.sh
 
-JAVA_VERSION=$($JAVA_RUN -version 2>&1 | sed 's/java version "\(.*\)\.\(.*\)\..*"/\1\2/; 1q')
+if [[ $STARTSTOP == "start" ]]; then
+    if [ -z $EXECUTIONMODE ]; then
+        echo "Missing execution mode (local|cluster) argument. $USAGE."
+        exit 1
+    fi
 
-if [ "$JAVA_VERSION" -lt 18 ]; then
-    JVM_ARGS="$JVM_ARGS -XX:MaxPermSize=256m"
-fi
+    if [[ ! ${FLINK_JM_HEAP} =~ $IS_NUMBER ]] || [[ "${FLINK_JM_HEAP}" -lt "0" ]]; then
+        echo "[ERROR] Configured JobManager memory size is not a valid value. Please set '${KEY_JOBM_MEM_SIZE}' in ${FLINK_CONF_FILE}."
+        exit 1
+    fi
 
-if [ "$FLINK_IDENT_STRING" = "" ]; then
-    FLINK_IDENT_STRING="$USER"
-fi
-
-FLINK_JM_CLASSPATH=`constructFlinkClassPath`
-
-log=$FLINK_LOG_DIR/flink-$FLINK_IDENT_STRING-jobmanager-$HOSTNAME.log
-out=$FLINK_LOG_DIR/flink-$FLINK_IDENT_STRING-jobmanager-$HOSTNAME.out
-pid=$FLINK_PID_DIR/flink-$FLINK_IDENT_STRING-jobmanager.pid
-log_setting=(-Dlog.file="$log" -Dlog4j.configuration=file:"$FLINK_CONF_DIR"/log4j.properties -Dlogback.configurationFile=file:"$FLINK_CONF_DIR"/logback.xml)
-
-case $STARTSTOP in
-
-    (start)
-
-        if [[ ! ${FLINK_JM_HEAP} =~ $IS_NUMBER ]]; then
-            echo "ERROR: Configured job manager heap size is not a number. Cancelling job manager startup."
-
+    if [ "$EXECUTIONMODE" = "local" ]; then
+        if [[ ! ${FLINK_TM_HEAP} =~ $IS_NUMBER ]] || [[ "${FLINK_TM_HEAP}" -lt "0" ]]; then
+            echo "[ERROR] Configured TaskManager memory size is not a valid value. Please set ${KEY_TASKM_MEM_SIZE} in ${FLINK_CONF_FILE}."
             exit 1
         fi
 
-        if [ "$EXECUTIONMODE" = "local" ]; then
-            if [[ ! ${FLINK_TM_HEAP} =~ $IS_NUMBER ]]; then
-                echo "ERROR: Configured task manager heap size is not a number. Cancelling (local) job manager startup."
+        FLINK_JM_HEAP=`expr $FLINK_JM_HEAP + $FLINK_TM_HEAP`
+    fi
 
-                exit 1
-            fi
+    if [ "${FLINK_JM_HEAP}" -gt "0" ]; then
+        export JVM_ARGS="$JVM_ARGS -Xms"$FLINK_JM_HEAP"m -Xmx"$FLINK_JM_HEAP"m"
+    fi
 
-            FLINK_JM_HEAP=`expr $FLINK_JM_HEAP + $FLINK_TM_HEAP`
-        fi
+    # Add JobManager-specific JVM options
+    export FLINK_ENV_JAVA_OPTS="${FLINK_ENV_JAVA_OPTS} ${FLINK_ENV_JAVA_OPTS_JM}"
 
-        if [ "$FLINK_JM_HEAP" -gt 0 ]; then
-            JVM_ARGS="$JVM_ARGS -Xms"$FLINK_JM_HEAP"m -Xmx"$FLINK_JM_HEAP"m"
-        fi
+    # Startup parameters
+    args=("--configDir" "${FLINK_CONF_DIR}" "--executionMode" "${EXECUTIONMODE}")
+    if [ ! -z $HOST ]; then
+        args+=("--host")
+        args+=("${HOST}")
+    fi
 
-        mkdir -p "$FLINK_PID_DIR"
-        if [ -f $pid ]; then
-            if kill -0 `cat $pid` > /dev/null 2>&1; then
-                echo Job manager running as process `cat $pid`.  Stop it first.
-                exit 1
-            fi
-        fi
+    if [ ! -z $WEBUIPORT ]; then
+        args+=("--webui-port")
+        args+=("${WEBUIPORT}")
+    fi
+fi
 
-        # Rotate log files
-        rotateLogFile $log
-        rotateLogFile $out
-
-        echo "Starting Job Manager"
-        $JAVA_RUN $JVM_ARGS ${FLINK_ENV_JAVA_OPTS} "${log_setting[@]}" -classpath "`manglePathList "$FLINK_JM_CLASSPATH:$INTERNAL_HADOOP_CLASSPATHS"`" org.apache.flink.runtime.jobmanager.JobManager --executionMode $EXECUTIONMODE --configDir "$FLINK_CONF_DIR"  > "$out" 2>&1 < /dev/null &
-        echo $! > $pid
-
-    ;;
-
-    (stop)
-        if [ -f $pid ]; then
-            if kill -0 `cat $pid` > /dev/null 2>&1; then
-                echo "Stopping job manager"
-                kill `cat $pid`
-            else
-                echo "No job manager to stop"
-            fi
-        else
-            echo "No job manager to stop"
-        fi
-    ;;
-
-    (*)
-        echo "Please specify 'start (cluster|local)' or stop"
-    ;;
-
-esac
+"${FLINK_BIN_DIR}"/flink-daemon.sh $STARTSTOP jobmanager "${args[@]}"
